fixes padding and vertical alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,23 +12,24 @@ header {
     color: white;
    padding: 10px;
    display: flex;
-   flex-wrap: nowrap;
    margin:  0;
 }
 
 H1 {
     font-size: 60px;
-    display: flex;
     padding: 10px;
     margin: 0;
-    width: 50%;      
+    width: 30%;  
+    justify-content: center;  
+    white-space: nowrap; 
 }
 
 header nav {
    padding: 10px;
    display: flex;
+   flex-wrap: wrap;
    justify-content: center;
-   width: 50%;
+   width: 60%;
 }
 
 header nav ul {
@@ -38,7 +39,9 @@ header nav ul {
    margin: 0;
    display: flex;
    justify-content: center;  
-   flex-wrap: nowrap;   
+   white-space: nowrap;  
+   position: relative;
+   top: 5px; 
 }
 
 header nav ul li {
@@ -47,7 +50,6 @@ header nav ul li {
     display: flex;
     position: relative;
     top: 10px;
-    flex-wrap: nowrap; 
 }
 
 .quote {
@@ -55,7 +57,7 @@ header nav ul li {
     text-align: center;
     justify-content: center;
     font-size: 35px;
-    padding: 30px;
+    padding: 10px;
     margin: 10px;
     border: 10px;
 }
@@ -131,15 +133,14 @@ border: 10px;
 }
  
  footer {
-    padding: 20px 20px 0px 20px;
-    border: 20px;
+   margin: 10px;
+    padding: 10px;
     display: flex;
     flex-wrap: no wrap;
-    margin: 100px 20px 10px 20px;
    display: flex;
    margin: 0;
    justify-content: center;
-   align-items: baseline;
+   align-items: center;
    background:  #161b22;
    color: white;
   
@@ -160,6 +161,9 @@ border: 10px;
     padding: 10px;
     justify-content: center;
     margin: 0;
+    align-items: center;
+    position: relative;
+    top: 10px;
  }
 
  
@@ -167,6 +171,8 @@ footer section {
    display: flex;
    margin: 0;
    padding: 0;
+   justify-content: center;
+   align-items: center;
 }
 
  footer nav ul {
@@ -180,6 +186,7 @@ footer section {
  }
 
  footer nav ul li {
-   padding: 30px 20px 20px 20px;
+   padding: 20px 30px 30px 30px;
    align-items: center;
+   justify-content: center;
  }
